Adding approx client time fix

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
     <ul>
-      <li>Client Time:  <span id='clientTime'></span></li>
+      <li>Client Time:  <span id='clientTime'></span> (diff: <span id='clientTimeDiff'></span>)</li>
       <li>Server Time: <span id='serverTime'></span> (lag: <span id='serverTimeDiff'></span>ms)</li>
-      <li>Server Aprx: <span id='serverApprox'></span> (diff: <span id='clientTimeDiff'></span>)</li>
       <li>Client count: <span id='clientCount'></span></li>
       <li><span id='color'></span></li>
     </ul>    
