--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
+    <h2>Rock Lights by Dmitry Sadakov</h2>
     <ul>
-      <li>Client Time:  <span id='clientTime'></span> (diff: <span id='clientTimeDiff'></span>)</li>
-      <li>Server Time: <span id='serverTime'></span> (lag: <span id='serverTimeDiff'></span>ms)</li>
+      <li>Client: <span id='clientTime'></span> (diff: <span id='clientTimeDiff'></span>)</li>
+      <li>Server: <span id='serverTime'></span> (lag: <span id='lag'></span>ms)</li>
       <li>Client count: <span id='clientCount'></span></li>
       <li><span id='color'></span></li>
     </ul>    
