--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
-    <h2>Rock Lights by Dmitry Sadakov</h2>
+    <h2>Rock Lights Concept by Dmitry Sadakov</h2>
     <ul>
-      <li>Client: <span id='clientTime'></span> (diff: <span id='clientTimeDiff'></span>)</li>
-      <li>Server: <span id='serverTime'></span> (lag: <span id='lag'></span>ms)</li>
-      <li>Client count: <span id='clientCount'></span></li>
-      <li><span id='color'></span></li>
+      <li>Client time: <span id='clientTime'></span></li>
+      <li>Server time: <span id='serverTime'></span></li>
+      <li>Clients: <span id='clientCount'></span></li>
+      <li>diff: <span id='clientTimeDiff'></span></li>
+      <li>lag: <span id='lag'></span>ms</li>
+      <li>Color: <span id='color'></span></li>
     </ul>    
     <script src="js/moment.js"></script>
     <script src="js/client.js"></script>
