--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
+<!DOCTYPE HTML>
 <html>
   <head>
     <link rel="stylesheet" href="styles/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
-    <h2>Rock Lights Concept by Dmitry Sadakov</h2>
+    <h2>Socialight Concept</h2>
     <ul>
       <li>Client time: <span id='clientTime'></span></li>
       <li>Server time: <span id='serverTime'></span></li>
       <li>Clients: <span id='clientCount'></span></li>
       <li>diff: <span id='clientTimeDiff'></span></li>
       <li>lag: <span id='lag'></span>ms</li>
+      <li>Draw lag: <span id='drawlag'></span>ms</li>
       <li>Color: <span id='color'></span></li>
+
     </ul>    
+    <canvas id="canvas" width="200" height="200"></canvas>
     <script src="js/moment.js"></script>
     <script src="js/client.js"></script>
-    <script>
-    </script>
   </body>
 </html>
