Making drawing time synced

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   </head>
   <body>
-    <h2>Socialight Concept</h2>
+    <h2>Rocklights Concept</h2>
     <ul>
       <li>Client time: <span id='clientTime'></span></li>
       <li>Server time: <span id='serverTime'></span></li>
