Removing lag time messaging

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <li>Client time: <span id='clientTime'></span></li>
       <li>Server time: <span id='serverTime'></span></li>
       <li>Clients: <span id='clientCount'></span></li>
-      <li>diff: <span id='clientTimeDiff'></span></li>
-      <li>lag: <span id='lag'></span>ms</li>
+      <!--<li>diff: <span id='clientTimeDiff'></span></li>
+      <li>lag: <span id='lag'></span>ms</li>-->
       <li>Draw lag: <span id='drawlag'></span>ms</li>
       <li>Color: <span id='color'></span></li>
 
