--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
       <li>Client time: <span id='clientTime'></span></li>
       <li>Server time: <span id='serverTime'></span></li>
       <li>Clients: <span id='clientCount'></span></li>
-      <!--<li>diff: <span id='clientTimeDiff'></span></li>
-      <li>lag: <span id='lag'></span>ms</li>-->
+      <li>clientTimeDiff: <span id='clientTimeDiff'></span>ms</li>
+      <!--<li>lag: <span id='lag'></span>ms</li>-->
+      <li>sync count: <span id='synccount'></span></li>
       <li>Draw lag: <span id='drawlag'></span>ms</li>
       <li>Color: <span id='color'></span></li>
 
     </ul>    
     <canvas id="canvas" width="200" height="200"></canvas>
     <script src="js/moment.js"></script>
+    <script src="js/ntp.js"></script>
     <script src="js/client.js"></script>
   </body>
 </html>
