--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <body>
     <h2>Rocklights Concept</h2>
     <ul>
-      <li>Client time: <span id='clientTime'></span></li>
-      <li>Server time: <span id='serverTime'></span></li>
+      <li><span id='clientTime'></span></li>
+      <!--<li>Server time: <span id='serverTime'></span></li>
+      <li>lag: <span id='lag'></span>ms</li>-->
+      <li>Sync samples: <span id='synccount'></span></li>
+      <li>Time offset: <span id='clientTimeDiff'></span></li>
       <li>Clients: <span id='clientCount'></span></li>
-      <li>clientTimeDiff: <span id='clientTimeDiff'></span>ms</li>
-      <!--<li>lag: <span id='lag'></span>ms</li>-->
-      <li>sync count: <span id='synccount'></span></li>
-      <li>Draw lag: <span id='drawlag'></span>ms</li>
-      <li>Color: <span id='color'></span></li>
+      <!-- <li>Draw lag: <span id='drawlag'></span>ms</li>
+      <li>Color: <span id='color'></span></li> -->
 
     </ul>    
     <canvas id="canvas" width="200" height="200"></canvas>
